<resources>
    <string name="app_name">Aiju_ChungHin_COMP304_Lab4</string>

    <string name="tvWelcome">Welcome, </string>
    <string name="str_guest">Guest</string>
    <string name="btnLogin">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_account">My Account</string>
    <string name="btn_ticket">My Ticket</string>
    <string name="btnRegister">Register</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_delete_acc">Delete Account</string>
    <string name="id_label">Your email address: </string>
    <string name="pass_label">Password: </string>
    <string name="confPass_label">Confirm your Password: </string>
    <string name="confPass_curPass_label">Type your current Password:</string>
    <string name="input_hint">Type here</string>
    <string name="my_ticket_def">No ticket purchased yet.</string>
    <string name="my_ticket_head">My Tickets:</string>

    <!-- messages -->
    <string name="msg_select_showtime">Please select the number of tickets and showtime</string>
    <string name="msg_select_tickettype">Please select the number of ticket(s) to purchase</string>
    <string name="msg_select_personalInfo">Please provide your personal information</string>
    <string name="msg_confirmSelect_showtime">Your selected showtime: </string>
    <string name="msg_confirmSelect_ticket">Your selected ticket(s): </string>
    <string name="msg_confirm_ticket">Confirm Your Ticket</string>
    <string name="msg_must_more_than_zero_ticket">Please purchase at least one ticket to proceed.</string>
    <string name="msg_must_select_a_showtime">Please select a showtime to proceed.</string>
    <string name="btn_msg_submit">Submit</string>
    <string name="btn_msg_cancel">Cancel</string>

    <string name="use_of_terms">As registered, we assume that you have read, understand, and agree on our use of terms.</string>
    <string name="dif_pass_msg">You have entered wrong password in confirm-password column. Please re-enter correctly.</string>
    <string name="faital_login">You have entered wrong credential information. Please confirm your ID and password.</string>
    <string name="invalid_input_msg">You have entered invalid email or postal code.\n(Example: xxx@example.com, A1B C4D)</string>
    <string name="msg_login_ok">Login as %s successfully!</string>
    <string name="email_used_msg">Your email have already in use!</string>
    <string name="unfilled_msg">Please fill all the column</string>
    <string name="good_bye_msg">Thank you for using our app.</string>
    <string name="msg_ticket_price">Price: $</string>

    <string name="msg_purchase_success">Purchase successfully!</string>

    <!-- movie name -->
    <string-array name="movieList">
        <item>The Woman King</item>
        <item>Top Gun: Maverick</item>
        <item>Pearl</item>
        <item>Minions: The Rise of Gru</item>
        <item>Bullet Train</item>
    </string-array>

    <string name="movie_womanking">The Woman King</string>
    <string name="movie_topgun">Top Gun: Maverick</string>
    <string name="movie_pearl">Pearl</string>
    <string name="movie_minions">Minions: The Rise of Gru</string>
    <string name="movie_bullettrain">Bullet Train</string>

    <!-- movie showdate -->
    <string name="showdate_1113">Nov 13</string>
    <string name="showdate_1114">Nov 14</string>
    <string name="showdate_1115">Nov 15</string>

    <!-- movie showtime -->
    <string-array name="showtime">
        <item>12:50 p.m.</item>
    </string-array>

    <string name="showtime_1250">12:50 p.m.</string>
    <string name="showtime_1415">2:15 p.m.</string>
    <string name="showtime_1645">4:45 p.m.</string>
    <string name="showtime_1850">6:50 p.m.</string>
    <string name="showtime_2050">8:50 p.m.</string>

    <!-- personal info -->
    <string name="checkout_firstname">First Name</string>
    <string name="checkout_lastname">Last Name</string>
    <string name="checkout_address">Address</string>
    <string name="checkout_city">City</string>
    <string name="checkout_postal">Postal Code</string>
    <string name="checkout_phone">Phone Number</string>
    <string name="checkout_email">Email</string>
</resources>