<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logAct_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/id_label" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logAct_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/pass_label" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logAct_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/btnLogin"/>

    <TextView
        android:id="@+id/debug_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEBUG USE"/>

</LinearLayout>